z-index bug fix

--- a/gallery.css
+++ b/gallery.css
@@ -107,6 +107,7 @@ html, body {
     top: 50%;
     transform: translate(0, -50%);
     user-select: none;
+    z-index: 3;
 }
 
 #viewer span:hover {
